[gd_scene load_steps=3 format=3 uid="uid://8wuhdqxfvk73"]

[ext_resource type="Script" path="res://src/Scripts/menus/settings_menu.gd" id="1_cv5m6"]
[ext_resource type="Texture2D" uid="uid://cmkvtdnn44yu8" path="res://Assets/Images/space background.jpg" id="2_vpkw6"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv5m6")

[node name="Background" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 0
offset_right = 1164.0
offset_bottom = 673.0
texture = ExtResource("2_vpkw6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 49.0
offset_top = 71.0
offset_right = 356.0
offset_bottom = 510.0

[node name="Back Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 346.0
offset_top = 191.0
offset_right = 805.0
offset_bottom = 563.0

[node name="Brightness Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Brightness"
horizontal_alignment = 1

[node name="Brightness Slider" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2
min_value = 0.01
max_value = 4.0
step = 0.01
value = 1.0

[node name="Blank Label (spacing)" type="Label" parent="VBoxContainer2"]
layout_mode = 2

[node name="Volume Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Master Volume:"
horizontal_alignment = 1

[node name="Volume Slider" type="HSlider" parent="VBoxContainer2"]
layout_mode = 2
value = 100.0
ticks_on_borders = true

[node name="Mute Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "Mute: "

[node name="Mute Box" type="CheckBox" parent="VBoxContainer2"]
layout_mode = 2
text = "Mute"

[connection signal="pressed" from="VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VBoxContainer2/Volume Slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer2/Mute Box" to="." method="_on_mute_box_toggled"]
